--- a/TODO
+++ b/TODO
@@ -1,21 +1,21 @@
-Lembrando que o aplicativo base não tem qualquer dependência.
+# Lembrando que o aplicativo base não tem qualquer dependência.
 
-Explicar com detalhes o sistema de rotas:
+## Explicar com detalhes o sistema de rotas:
 - .htaccess (os dois)
 - public/index.php
 - application/bootstrap.php
 - application/Core/Router.php (aqui inserir paradas e comentar...)
 
-As 3 dependências/pacotes instalados são úteis, mas opcionais, podendo ser removidos.
+## As 3 dependências/pacotes instalados são úteis, mas opcionais, podendo ser removidos.
 
 - Paginação (Dividir para view, controller e model)
 - Busca (Dividir para view, controller e model)
 - Usar o mais que puder de metdados dos SGBDs para tornar o aplicativo menos trabalhoso de codificar, puxando as informações diretamente do banco de dados usando os referidos metadados
 - Definir rota default no config.php e implementar no Router.php
 
-Criar novas classes para usar:
+## Criar novas classes para usar:
 
-Front
+## Front
 - form com bons recursos: input, select, radio, check, etc
 - table
 - links
@@ -25,7 +25,7 @@ Front
 - tooltip com BS
 - datagrid
 
-Arquivos de template:
+## Arquivos de template:
 - header
 - footer
 
